--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
         "downcasted",
         "Downcasting",
         "dtype",
+        "endregion",
         "equi",
         "equidimensional",
         "FAISS",
@@ -140,6 +141,7 @@
         "SLOC",
         "sorensen",
         "tanimoto",
+        "ucall",
         "uninitialize",
         "unumusearch",
         "usearch",
